--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -51,7 +51,7 @@ spec:
               - name: OTEL_PYTHON_DJANGO_EXCLUDED_URLS
                 value: /api/notification,/api/ping
               - name: OTEL_EXPORTER_OTLP_ENDPOINT
-                value: http://default-collector.svc.cluster.local:4318
+                value: http://istio-collector-collector.istio-system.svc.cluster.local:4318
               - name: TZ
                 value: America/Chicago
               - name: PUID
