--- a/kubernetes/apps/kube-system/k8s-otel-collector.yaml
+++ b/kubernetes/apps/kube-system/k8s-otel-collector.yaml
@@ -23,6 +23,7 @@ spec:
         timeout: 10s
 
     service:
+      pipelines:
         metrics:
           receivers: [k8s_cluster]
           processors: [cumulativetodelta, batch, resourcedetection]
