Update open telemetry operator and auto instrumentation images

--- a/kubernetes/apps/istio/istio-otel-collector.yaml
+++ b/kubernetes/apps/istio/istio-otel-collector.yaml
@@ -4,6 +4,8 @@ metadata:
   name: istio-collector
   namespace: istio-system
 spec:
+  args:
+    feature-gates: ""
   mode: deployment
   config: |
     receivers:
