--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -43,7 +43,7 @@ spec:
               - name: OTEL_METRICS_EXPORTER
                 value: otlp
               - name: OTEL_LOGS_EXPORTER
-                value: console,otlp
+                value: otlp
               - name: OTEL_RESOURCE_ATTRIBUTES
                 value: service.name=tubearchivist,application=tubearchivist
               - name: DJANGO_SETTINGS_MODULE
