--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -56,6 +56,8 @@ spec:
                 value: /api/notification,/api/ping,/health
               - name: OTEL_EXPORTER_OTLP_ENDPOINT
                 value: http://istio-collector-collector.istio-system.svc.cluster.local:4318
+              - name: OTEL_EXPORTER_OTLP_PROTOCOL
+                value: http/protobuf
               - name: TZ
                 value: America/Chicago
               - name: PUID
