--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -44,6 +44,6 @@ spec:
 #  python:
 #    env:
 #      - name: OTEL_LOGS_EXPORTER
-#        value: otlp_proto_http
+#        value: otlp
 #      - name: OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED
 #        value: 'true'
