--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -66,9 +66,9 @@ spec:
   sampler:
     type: parentbased_traceidratio
     argument: "1"
-  dotnet:
-    env:
-      - name: OTEL_EXPORTER_OTLP_LOGS_PROTOCOL
-        value: grpc
-      - name: OTEL_EXPORTER_OTLP_TRACES_PROTOCOL
-        value: grpc
+#  dotnet:
+#    env:
+#      - name: OTEL_EXPORTER_OTLP_LOGS_PROTOCOL
+#        value: grpc
+#      - name: OTEL_EXPORTER_OTLP_TRACES_PROTOCOL
+#        value: grpc
