Update radarr instrumentation

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -27,7 +27,7 @@ spec:
         app: radarr
     podAnnotations:
       instrumentation.opentelemetry.io/inject-dotnet: "default/dotnet-instrumentation"
-      instrumentation.opentelemetry.io/container-names: "radarr"
+#      instrumentation.opentelemetry.io/container-names: "radarr"
     env:
       TZ: America/Chicago
       PUID: 1000
