--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -53,11 +53,11 @@ spec:
               - name: DJANGO_SETTINGS_MODULE
                 value: config.settings
               - name: OTEL_PYTHON_DJANGO_EXCLUDED_URLS
-                value: /api/notification,/api/ping,/health
+                value: /api/notification/,/api/ping/,/health
               - name: OTEL_EXPORTER_OTLP_ENDPOINT
-                value: http://istio-collector-collector.istio-system.svc.cluster.local:4318
+                value: http://istio-collector-collector.istio-system.svc.cluster.local:4317
               - name: OTEL_EXPORTER_OTLP_PROTOCOL
-                value: http/protobuf
+                value: grpc
               - name: OTEL_PYTHON_LOG_CORRELATION
                 value: true
               - name: TZ
