--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -37,6 +37,30 @@ spec:
         name: internal
         default: true
         controllerValue: k8s.io/internal
+      opentelemetry:
+        enabled: true
+        name: opentelemetry
+        image:
+          registry: registry.k8s.io
+          image: ingress-nginx/opentelemetry-1.25.3
+          ## for backwards compatibility consider setting the full image url via the repository value below
+          ## use *either* current default registry/image or repository format or installing chart by providing the values.yaml will fail
+          ## repository:
+          tag: v20240813-b933310d
+          digest: sha256:f7604ac0547ed64d79b98d92133234e66c2c8aade3c1f4809fed5eec1fb7f922
+          distroless: true
+        containerSecurityContext:
+          runAsNonRoot: true
+          # -- The image's default user, inherited from its base image `cgr.dev/chainguard/static`.
+          runAsUser: 65532
+          allowPrivilegeEscalation: false
+          seccompProfile:
+            type: RuntimeDefault
+          capabilities:
+            drop:
+              - ALL
+          readOnlyRootFilesystem: true
+        resources: {}
       admissionWebhooks:
         objectSelector:
           matchExpressions:
@@ -44,6 +68,18 @@ spec:
               operator: In
               values: ["internal"]
       config:
+        enable-opentelemetry: "true"
+        opentelemetry-operation-name: "HTTP $request_method $service_name $uri"
+        opentelemetry-trust-incoming-span: "true"
+        otlp-collector-host: "istio-collector-collector.istio-system.svc.cluster.local"
+        otlp-collector-port: "4317"
+        otel-max-queuesize: "2048"
+        otel-schedule-delay-millis: "5000"
+        otel-max-export-batch-size: "512"
+        otel-service-name: "nginx-proxy" # Opentelemetry resource name
+        otel-sampler: "AlwaysOn" # Also: AlwaysOff, TraceIdRatioBased
+        otel-sampler-ratio: "1.0"
+        otel-sampler-parent-based: "true"
         client-body-buffer-size: 100M
         client-body-timeout: 120
         client-header-timeout: 120
