Update istio tracing config

--- a/kubernetes/apps/istio/tracing-config.yaml
+++ b/kubernetes/apps/istio/tracing-config.yaml
@@ -1,15 +1,10 @@
 apiVersion: telemetry.istio.io/v1
 kind: Telemetry
 metadata:
-  name: otel-demo
+  name: otel-tracing
   namespace: istio-system
 spec:
   tracing:
     - providers:
         - name: otel-tracing
-          opentelemetry:
-            port: 4317
-            service: istio-collector-collector.istio-system.svc.cluster.local
-            resource_detectors:
-              environment: {}
       randomSamplingPercentage: 100
