--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -58,6 +58,8 @@ spec:
                 value: http://istio-collector-collector.istio-system.svc.cluster.local:4317
               - name: OTEL_EXPORTER_OTLP_PROTOCOL
                 value: grpc
+              - name: OTEL_EXPORTER_OTLP_COMPRESSION
+                value: gzip
               - name: OTEL_PYTHON_LOG_CORRELATION
                 value: true
               - name: TZ
