--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -26,6 +26,8 @@ spec:
         value: grpc
       - name: OTEL_EXPORTER_OTLP_TRACES_PROTOCOL
         value: grpc
+      - name: OTEL_EXPORTER_OTLP_COMPRESSION
+        value: gzip
 ---
 apiVersion: opentelemetry.io/v1alpha1
 kind: Instrumentation
@@ -45,12 +47,8 @@ spec:
     env:
       - name: OTEL_PYTHON_DISABLED_INSTRUMENTATIONS
         value: fs
-#  python:
-#    env:
-#      - name: OTEL_LOGS_EXPORTER
-#        value: otlp
-#      - name: OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED
-#        value: 'true'
+      - name: OTEL_EXPORTER_OTLP_COMPRESSION
+        value: gzip
 ---
 apiVersion: opentelemetry.io/v1alpha1
 kind: Instrumentation
@@ -74,3 +72,5 @@ spec:
         value: grpc
       - name: OTEL_DOTNET_AUTO_TRACES_CONSOLE_EXPORTER_ENABLED
         value: "true"
+      - name: OTEL_EXPORTER_OTLP_COMPRESSION
+        value: gzip
