--- a/kubernetes/apps/istio/tracing-config.yaml
+++ b/kubernetes/apps/istio/tracing-config.yaml
@@ -8,3 +8,6 @@ spec:
     - providers:
         - name: otel-tracing
       randomSamplingPercentage: 100
+  metrics:
+    - providers:
+        - name: otel-tracing
