Enable envoy logging to otel

--- a/kubernetes/apps/istio/tracing-config.yaml
+++ b/kubernetes/apps/istio/tracing-config.yaml
@@ -11,3 +11,6 @@ spec:
   metrics:
     - providers:
         - name: otel-tracing
+  accessLogging:
+    - providers:
+        - name: otel-tracing
