Set default telemetry provider to otel for istio

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -112,6 +112,10 @@ spec:
       enablePrometheusMerge: true
       enableTracing: true
       ingressClass: istio-ingress
+      defaultProviders:
+        tracing: [otel-tracing]
+        metrics: [otel-tracing]
+        accessLogging: [otel-tracing]
       defaultConfig:
         proxyMetadata:
           ISTIO_META_DNS_CAPTURE: "true"
