Add otlp grpc port to alloy extra ports

--- a/kubernetes/apps/monitoring/alloy/alloy.yaml
+++ b/kubernetes/apps/monitoring/alloy/alloy.yaml
@@ -77,7 +77,11 @@ spec:
       envFrom: [ ]
       extraArgs: [ ]
       extraEnv: [ ]
-      extraPorts: [ ]
+      extraPorts:
+       - name: "grpc"
+         port: 4317
+         targetPort: 4317
+         protocol: "TCP"
       listenAddr: 0.0.0.0
       listenPort: 12345
       listenScheme: HTTP
