Update alloy and grafana config

--- a/kubernetes/apps/monitoring/alloy/alloy.yaml
+++ b/kubernetes/apps/monitoring/alloy/alloy.yaml
@@ -85,6 +85,10 @@ spec:
          port: 4317
          targetPort: 4317
          protocol: "TCP"
+       - name: "http"
+         port: 4318
+         targetPort: 4318
+         protocol: "TCP"
       listenAddr: 0.0.0.0
       listenPort: 12345
       listenScheme: HTTP
