Enable alert manager in grafana

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
       valuesKey: kube-state-metrics-config.yaml
   values:
     alertmanager:
-      enabled: false
+      enabled: true
     grafana:
       image:
         # -- The Docker registry
