Disable unused alert manager rules

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -35,6 +35,11 @@ spec:
   values:
     alertmanager:
       enabled: true
+    defaultRules:
+      kubeControllerManager: false
+      kubeProxy: false
+      disabled:
+        KubeSchedulerDown: true
     grafana:
       image:
         # -- The Docker registry
